alpm-repo-db/tests/parse_errors/files/snapshots/wrong_header.snap
---
source: alpm-repo/tests/parse_errors.rs
description: "%WRONG%\nusr/\nusr/bin/\nusr/bin/foo\n"
expression: error.to_string()
---
Parser failed with the following error:
parse error at line 1, column 1
  |
1 | %WRONG%
  | ^
invalid alpm-repo-files section header
expected %FILES%
